# nlp_course

./: .gitignore  README.md  classification.py  classification.sh  convert.py  data.py  env.sh  eval.py  eval_ceval.py  eval_toutiao.py  evaluator.py  inference.py  inference_dpo.py  mygpt.py  optim.py  pretrain.py  pretrain_single.py  pyproject.toml  sft.sh  sft_classification.py  step_02.sh  test.ipynb  tokenizer.py  train_dpo.py  train_tokenizer.py  transformer.py  utils.py  validation_classification.py
base_model/: mygpt.py  optim.py  tokenizer.py  transformer.py  utils.py
ceval/: evaluator.py  myEvaluator.py
dpo_model/: config.py  dpo.py  model.py  reference_model.py
toutiao/: myEvaluator.py  split.py  to_df.py
utils/: convert_sft.py  data.py  dpo_data_load.py  infer_funs.py
